# Matrix

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  TODO  main.cpp  main.cpp.
.github/workflows/: ci.yml
cmake/: CompileFlags.cmake
include/: buffer.hpp  matrix.hpp  proxyrow.hpp
include/detail/: buffer.hpp  proxyrow.hpp
scripts/: gen_large_matrix.py
tests/: test_buffer.cpp
tests/data/: matrix_25x25.ans
tests/source/: test_buffer.cpp  test_matrix.cpp
tests/utils/include/: details.hpp  test_utils.hpp  utils.hpp
utils/include/: utils.hpp
